# gtest_template

./: CMakeLists.txt  README.md  compiler_options.cmake
inc/module/: module.hpp  secondModule.hpp
src/: main.cpp  module.cpp  secondModule.cpp
tst/: CMakeLists.txt  testModule.cpp
